--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,29 @@
+@font-face {
+    font-family: 'icones';
+    src: url(../font/icones.ttf);
+}
+
 body {
     background-color: #1D232A;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', 'icones', sans-serif;
     color: white;
 }
 
 .cabecalho {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #15191C;
+    padding: 8px 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
+}
+
+.cabecalho-menu i::before {
+    content: "\e904";
+    font-size: 24px;
+}
+
+.cabecalho-notificacao::before {
+    content: "\e906";
+    font-size: 24px;
 }
