--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,13 @@ body {
     background-color: #15191C;
     width: 75vw;
     height: 100vh;
+    position:absolute;
+    left: -100vw;
 
+}
+
+.menu-lateral--ativo{
+    left: 0;
 }
 
 .menu-lateral__logo {
