--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,15 @@ body {
     background-color: #15191C;
     width: 75vw;
     height: 100vh;
-    position:absolute;
+    position: absolute;
     left: -100vw;
+    transition: .25s;
 
 }
 
-.menu-lateral--ativo{
+.menu-lateral--ativo {
     left: 0;
+    transition: .25s;
 }
 
 .menu-lateral__logo {
@@ -99,4 +101,50 @@ body {
 
 .menu-lateral__link--pinturas::before {
     content: "\e90a";
+}
+
+.principal {
+    padding: 24px 16px;
+}
+
+.titulo-pagina {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.cartao {
+    width: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+    background-color: #2c342a;
+}
+
+.cartao-conteudo {
+    padding: 16px;
+
+}
+
+.cartao-titulo {
+    font-size: 1.2rem;
+}
+
+.cartao-perfil {
+    color: #95999C;
+    font-size: 0.9rem;
+}
+
+.cartao-info {
+    display: flex;
+    align-items: center;
+    color: #95999C;
+}
+
+.carta-info-tempo {
+    content: "\e90c";
+    margin-right: 8px;
+}
+
+.cartao-info-visualizacao {
+content:"\e90c";
+margin-right: ;
 }
