--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: 'icones';
+    font-family: "icones";
     src: url(../font/icones.ttf);
 }
 
 body {
     background-color: #1D232A;
-    font-family: 'Open Sans', 'icones', sans-serif;
+    font-family: "Open Sans", "icones", sans-serif;
     color: white;
 }
 
@@ -109,23 +109,25 @@ body {
 
 .titulo-pagina {
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .cartao {
     width: 100%;
     border-radius: 15px;
     overflow: hidden;
-    background-color: #2c342a;
+    background-color: #2c343a;
 }
 
 .cartao-conteudo {
     padding: 16px;
-
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .cartao-titulo {
     font-size: 1.2rem;
+    font-weight: 700;
 }
 
 .cartao-perfil {
@@ -133,18 +135,47 @@ body {
     font-size: 0.9rem;
 }
 
-.cartao-info {
+.cartao--info {
     display: flex;
     align-items: center;
     color: #95999C;
 }
 
-.carta-info-tempo {
+.carta-info--tempo {
     content: "\e90c";
     margin-right: 8px;
 }
 
-.cartao-info-visualizacao {
-content:"\e90c";
-margin-right: ;
+.cartao-info--visualizacao {
+    content: "\e90f";
+    margin-right: 8px;
+}
+
+.cartao-botao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0480dc;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 0.9rem;
+}
+
+.cartao-botao--play {
+    content: "\e90b";
+    font-size: 24px;
+}
+
+.cartao-botao--play::before {
+    content: "\e90b";
+    font-size: 24px;
+}
+
+.cartao-botao--destaque {
+    width: 100%;
+}
+
+.cartao-botao--destaque::before {
+    margin-right: 8px;
 }
